# theme-park-sim

./: Cargo.toml
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/frame_buffer/: Cargo.toml
crates/frame_buffer/src/: lib.rs
crates/game_client/: Cargo.toml
crates/game_client/src/: main.rs
crates/game_controller/: Cargo.toml
crates/game_controller/src/: lib.rs  world.rs
crates/game_data/: Cargo.toml
crates/game_data/src/: lib.rs  system_swap_data.rs
crates/game_engine/: Cargo.toml
crates/game_engine/src/: fixed_update.rs  frame_update.rs  lib.rs
crates/game_entity/: Cargo.toml
crates/game_entity/src/: lib.rs
crates/game_input/: Cargo.toml
crates/game_input/src/: lib.rs
crates/game_resources/: Cargo.toml
crates/game_resources/src/: lib.rs  mesh.rs
crates/game_system/: Cargo.toml
crates/game_system/src/: lib.rs
crates/game_vr/: Cargo.toml
crates/game_vr/src/: lib.rs
crates/gpu_compute_data/: Cargo.toml
crates/gpu_compute_data/src/: lib.rs
crates/metal/: Cargo.toml
crates/metal/src/: compute_data.rs  compute_pipeline.rs  lib.rs  pipeline.rs
crates/shared_data/: Cargo.toml
crates/shared_data/src/: lib.rs
crates/sys_static_mesh/: Cargo.toml
crates/sys_static_mesh/src/: lib.rs
crates/system_audio/: Cargo.toml
crates/system_audio/src/: lib.rs
crates/system_camera/: Cargo.toml
crates/system_camera/src/: lib.rs
crates/system_guest/: Cargo.toml
crates/system_guest/src/: lib.rs
crates/system_interfaces/: Cargo.toml
crates/system_interfaces/src/: lib.rs  navigation.rs  physics.rs  static_mesh.rs
crates/system_navigation/: Cargo.toml
crates/system_navigation/src/: lib.rs
crates/system_network/: Cargo.toml
crates/system_network/src/: client.rs  lib.rs  packet.rs  server.rs
crates/system_network_packet_macro/: Cargo.toml
crates/system_network_packet_macro/src/: lib.rs
crates/system_physics/: Cargo.toml
crates/system_physics/src/: lib.rs
crates/system_static_mesh/: Cargo.toml
crates/system_static_mesh/src/: lib.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs
crates/task_executor/: Cargo.toml
crates/task_executor/src/: async_task.rs  lib.rs  task.rs
crates/update_buffer/: Cargo.toml
crates/update_buffer/src/: lib.rs
crates/vulkan/: Cargo.toml
crates/vulkan/src/: allocator.rs  descriptor_set_layouts.rs  device.rs  frame.rs  instance.rs  lib.rs  pipeline.rs  render_pass.rs  scene.rs  static_mesh.rs  swapchain.rs  transfer.rs
res/shaders/: default.metal  default.vert  default.vert.spv  guests.metal
