[package]
name = "game_controller"
version = "0.0.0"
edition = "2021"

[dependencies]
nalgebra-glm = "0.16.0"

event = { path = "../event" }
frame_buffer = { path = "../frame_buffer" }
game_entity = { path = "../game_entity" }
game_input = { path = "../game_input" }
game_resources = { path = "../game_resources" }
