[package]
name = "game_engine"
version = "0.0.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.21", default-features = false }
winit = "0.26.1"

event = { path = "../event" }
frame_buffer = { path = "../frame_buffer" }
game_controller = { path = "../game_controller" }
game_input = { path = "../game_input" }
game_system = { path = "../game_system" }
system_audio = { path = "../system_audio" }
system_static_mesh = { path = "../system_static_mesh" }
system_interfaces = { path = "../system_interfaces" }
task_executor = { path = "../task_executor" }
update_buffer = { path = "../update_buffer" }

[target.'cfg(target_vendor = "apple")'.dependencies]
metal = { path = "../metal" }

[target.'cfg(not(target_vendor = "apple"))'.dependencies]
vulkan = { path = "../vulkan" }
