[package]
name = "metal"
version = "0.0.0"
edition = "2021"

[target.'cfg(target_vendor = "apple")'.dependencies]
anyhow = "1.0.56"
cocoa = "0.24.0"
core-graphics-types = "0.1.1"
log = "0.4.16"
metal = "0.23.1"
naga = { version = "0.8.5", features = ["msl-out", "spv-in"] }
nalgebra-glm = "0.16.0"
objc = "0.2.7"
winit = "0.26.1"

frame_buffer = { path = "../frame_buffer" }
game_entity = { path = "../game_entity" }
