[package]
name = "system_network"
version = "0.0.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
laminar = "0.5.0"
log = "0.4.16"
nalgebra-glm = "0.16.0"

event = { path = "../event" }
game_data = { path = "../game_data" }
game_entity = { path = "../game_entity" }
system_network_packet_macro = { path = "../system_network_packet_macro" }
update_buffer = { path = "../update_buffer" }
