[package]
name = "vulkan"
version = "0.0.0"
edition = "2021"

[target.'cfg(not(target_vendor = "apple"))'.dependencies]
anyhow = "1.0.56"
erupt = "0.22"
gpu-alloc = "0.5.3"
gpu-alloc-erupt = "0.7.0"
memoffset = "0.6.5"
nalgebra-glm = "0.16.0"
smallvec = "1.8.0"
winit = "0.26.1"

frame_buffer = { path = "../frame_buffer" }
game_entity = { path = "../game_entity" }
